# hic

./: .clang-format  CMakeLists.txt  LICENSE  README.md  grammar.md
client/: CMakeLists.txt  main.cc
client/source/: CMakeLists.txt  test.cc  test.h
resource/: test1.hic
src/: CMakeLists.txt  core.h  lexical_analyse.cc  lexical_analyse.h  main.cc  rule.h  syntactic_analyse.h  syntactic_analysis.h  util.h  word_analyse.h
src/analyse/: entity.cpp  entity.h  generate_asm.h  lexical_analyse.h  rule.h  semantic_analyse.h  syntactic_analyse.h  util.h
src/magic/: macro.h  unset_macro.h
src/vm/: core.h  instructions.h  vmcore.h
stdlib/: native_call.hic
test/: CMakeLists.txt  example_add.c  main.cc
